Update Access to legacy data storage systems.ini

--- a/Access to legacy data storage systems.ini
+++ b/Access to legacy data storage systems.ini
@@ -26,10 +26,10 @@
 [global]
 
 ## Browsing/Identification ###
+#Наступна команда визначає мінімальний протокол, який клієнти можуть використовувати для підключення до сервера Samba.
+   client min protocol = NT1
 
 # Change this to the workgroup/NT-domain name your Samba server will part of
-   client min protocol = NT1
-   ntlm auth = ntlmv1-permitted
    workgroup = WORKGROUP
    
 # server string is the equivalent of the NT Description field
