--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -25,8 +25,10 @@
 
 ## Browsing/Identification ###
 #Наступна команда визначає мінімальний протокол, який клієнти можуть використовувати для підключення до сервера Samba.
+#The next command defines the minimum protocol that clients can use to connect to the Samba server.
    client min protocol = NT1
 
+#   ntlm auth = ntlmv1-permitted
 # Change this to the workgroup/NT-domain name your Samba server will part of
    workgroup = WORKGROUP
    
