--- a/Terminal.ini
+++ b/Terminal.ini
@@ -1,1 +1,18 @@
-htop
+#Device list
+sudo lspci
+
+*** AUDIO ***
+#Alsamixer Settings
+alsamixer
+#Restart ALSA
+lsof /dev/snd/*
+#Новіші системи використовують PipeWire, але будь-яка звукова система підходить. 
+#Щоб перезапустити ці служби (і перевірити їх статус)
+systemctl restart --user pipewire.service
+systemctl restart --user wireplumber.service
+systemctl status --user pipewire.service
+systemctl status --user wireplumber.service
+sudo alsa force-reload
+#Reinstall ALSA
+sudo apt-get remove --purge alsa-base pipewire
+sudo apt-get install alsa-base pipewire
