--- a/Terminal.ini
+++ b/Terminal.ini
@@ -16,3 +16,16 @@ sudo alsa force-reload
 #Reinstall ALSA
 sudo apt-get remove --purge alsa-base pipewire
 sudo apt-get install alsa-base pipewire
+#TOP Panel
+Ubuntu 23
+Package is available in Ubuntu 23.04 and newer: gnome-browser-connector
+To install package type:
+sudo apt-get install gnome-browser-connector
+
+With older versions use: chrome-gnome-shell
+To install package type:
+sudo apt-get install chrome-gnome-shell
+
+https://gitlab.gnome.org/tuxor1337/hidetopbar
+wget https://example.com/gnome-shell-extension-autohidetopbar.deb
+sudo dpkg -i gnome-shell-extension-autohidetopbar.deb
