--- a/.Ubuntu/Персоналізація (мікромани)/Lan/.ssh/config
+++ b/.Ubuntu/Персоналізація (мікромани)/Lan/.ssh/config
@@ -2,3 +2,8 @@ Host k1
     HostName 192.168.1.222
     User k1
     IdentityFile ~/.ssh/koliasa
+
+Host k2
+    HostName 192.168.1.10
+    User k1
+    IdentityFile ~/.ssh/koliasa
